--- a/table.html
+++ b/table.html
@@ -20,7 +20,7 @@
     <title>Zauberkette</title>
 </head>
 
-<body class="table-body" onload="renderTable()" id="body">
+<body class="table-body" onload="renderTable(); detectTouchDevice();" id="body">
     <!-------------------- NAVBAR -------------------->
     <header w3-include-html="./templates/header.html"></header>
     <!-------------------- MAIN STUFF -------------------->
@@ -29,10 +29,10 @@
             <div class="observer-part" id="observerPartID">
                 <!-------------OBSERVER PART-------------------->
                 <div class="accord-zone" id="">
-                    <div class="circle-img" id="obsCircle1">
+                    <div class="circle-img hover-effect" id="obsCircle1">
                         <!-------------ACC CIRCLE-------------------->
                     </div>
-                    <div class="circle-img" id="obsCircle2">
+                    <div class="circle-img hover-effect" id="obsCircle2">
                         <!-------------ACC CIRCLE-------------------->
                     </div>
                 </div>
@@ -56,18 +56,18 @@
                         <!------------- CURRENT INFOS-------------->
                     </div>
                     <div class="btn-group">
-                        <button onclick="awaitChangeCard()" id="changeClicks(1)"
+                        <button class="hover-effect" onclick="awaitChangeCard()" id="changeClicks(1)"
                             style="display: inline;">Kartentausch</button>
-                        <button onclick="noChanges()" id="changeClicks(2)" style="display: inline;">Nothing to
+                        <button class="hover-effect" onclick="noChanges()" id="changeClicks(2)" style="display: inline;">Nothing to
                             Change</button>
-                        <button onclick="setCardCombi()" id="changeClicks(3)" style="display: none;">Komponiere einen
+                        <button class="hover-effect" onclick="setCardCombi()" id="changeClicks(3)" style="display: none;">Komponiere einen
                             Zauber</button>
-                        <button onclick="useMellot()" id="changeClicks(4)" style="display: none;">useMellot</button>
-                        <button onclick="useGoblin()" id="changeClicks(5)" style="display: none;">useGoblin</button>
-                        <button onclick="useWizzard()" id="changeClicks(6)" style="display: none;">useWizzard</button>
-                        <button onclick="stepBack()" id="changeClicks(8)" style="display: none;">Step Back</button>
+                        <button class="hover-effect" onclick="useMellot()" id="changeClicks(4)" style="display: none;">useMellot</button>
+                        <button class="hover-effect" onclick="useGoblin()" id="changeClicks(5)" style="display: none;">useGoblin</button>
+                        <button class="hover-effect" onclick="useWizzard()" id="changeClicks(6)" style="display: none;">useWizzard</button>
+                        <button class="hover-effect" onclick="stepBack()" id="changeClicks(8)" style="display: none;">Step Back</button>
                         <!--actually nextPlayer() insted of changeCard()-->
-                        <button onclick="finishRound()" id="changeClicks(7)" style="display: none;">Finish
+                        <button class="hover-effect" onclick="finishRound()" id="changeClicks(7)" style="display: none;">Finish
                             Round</button>
                     </div>
                 </div>
@@ -76,10 +76,10 @@
             <!------------------- PLAYER PART ------------------------>
             <div class="current-player-part" id="currentPlayerPartID">
                 <div class="accord-zone" id="">
-                    <div class="circle-img" id="playerCircle1">
+                    <div class="circle-img hover-effect" id="playerCircle1">
                         <!-----------ACC CIRCLE---------------->
                     </div>
-                    <div class="circle-img" id="playerCircle2">
+                    <div class="circle-img hover-effect" id="playerCircle2">
                         <!-----------ACC CIRCLE---------------->
                     </div>
                 </div>
@@ -94,5 +94,6 @@
     </main>
     </div>
 </body>
+
 
 </html>
