add sounds and sound-mixer.js

--- a/table.html
+++ b/table.html
@@ -2,7 +2,7 @@
 <html lang="de">
 
 <head>
-    <link rel="shortcut icon" href="images/Locri-49K.jpeg">
+    <link rel="shortcut icon" href="assets/images/Locri-49K.jpeg">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +16,7 @@
     <script src="scripts/script.js"></script>
     <script src="scripts/play-cards.js"></script>
     <script src="scripts/play-accords.js"></script>
+    <script src="scripts/sound-mixer.js"></script>
     <script src="scripts/start-end-round.js"></script>
     <title>Zauberkette</title>
 </head>
