renew toggle menu and add table-mirror-frame

--- a/table.html
+++ b/table.html
@@ -21,7 +21,7 @@
     <title>Zauberkette</title>
 </head>
 
-<body class="table-body" onload="renderTable(); detectTouchDevice();" id="body">
+<body class="table-body" onload="initialize();" id="body">
     <!-------------------- MAIN STUFF -------------------->
 <div id="headInfoID">
     <header w3-include-html="./templates/header.html"></header>
