fixed problems with second circle

--- a/table.html
+++ b/table.html
@@ -36,6 +36,7 @@
         </div>
     </div>
     <main>
+        
         <div class="filter-bgr">
 
         <div class="table-frame">
@@ -83,7 +84,7 @@
                         style="display: none;">Step
                         Back</button>
                     <!--actually nextPlayer() insted of changeCard()-->
-                    <button class="hover-effect shimmering-gold" onclick="finishRound()" id="changeClicks(7)"
+                    <button class="hover-effect shimmering-gold" onclick="handleFinishRoundClick()" id="changeClicks(7)"
                         style="display: none;">Finish
                         Round</button>
                 </div>
