--- a/table.html
+++ b/table.html
@@ -2,7 +2,7 @@
 <html lang="de">
 
 <head>
-    <link rel="shortcut icon" href="assets/images/logo-black.png">
+    <link rel="shortcut icon" href="./assets/images/logo-black.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,83 +31,95 @@
 
         <div class="filter-bgr">
 
-        <div class="table-frame">
-            <div class="table-top" id="observerPartID">
-                <!-------------OBSERVER PART-------------------->
-                <div class="accord-zone" id="">
-                    <div class="circle-img hover-effect" id="obsCircle1">
-                        <!-------------ACC CIRCLE-------------------->
+            <div class="table-frame">
+                <div class="table-top" id="observerPartID">
+                    <!-------------OBSERVER PART-------------------->
+                    <div class="accord-zone" id="">
+                        <div class="circle-img hover-effect" id="obsCircle1">
+                            <!-------------ACC CIRCLE-------------------->
+                        </div>
+                        <div class="circle-img hover-effect" id="obsCircle2">
+                            <!-------------ACC CIRCLE-------------------->
+                        </div>
+                        <div class="chain-helper-frame">
+                            <img class="info-chain" src="assets/images/icons/info-5-24.png" alt="Info">
+                            <img src="assets/images/acc-helper.jpg" class="chain-helper" alt="Chain Helper">
+                        </div>
                     </div>
-                    <div class="circle-img hover-effect" id="obsCircle2">
-                        <!-------------ACC CIRCLE-------------------->
+
+                    <div class="top-zone" id="topZoneID">
+                        <!-- mit btn startRound wird eigentlich PL1 und Pl2 getauscht-->
+                        <div class="name-frame brass-plate">
+                            <h5 class="zone-descr">Observer-Card Zone</h5>
+                            <h2 class="name" id="obsNameID">Alfa</h2>
+                        </div>
+                        <div class="card-group" id="observerStackID">
+                            <!-- 5 Cards -->
+                        </div>
                     </div>
                 </div>
 
-                <div class="top-zone" id="topZoneID"> <!-- mit btn startRound wird eigentlich PL1 und Pl2 getauscht-->
-                    <div class="name-frame brass-plate">
-                        <h5 class="zone-descr">Observer-Card Zone</h5>
-                        <h2 class="name" id="obsNameID">Alfa</h2>
+                <!-------------BUTTON PART-------------------->
+                <div class="table-center" id="secondPartID">
+
+                    <div class="left-center-frame">
+                        <div class="info-frame brass-plate">
+                            <div class="info-text" id="infoTextID"></div>
+                        </div>
+
                     </div>
-                    <div class="card-group" id="observerStackID">
-                        <!-- 5 Cards -->
+
+                    <div class="btn-group">
+                        <button class="hover-effect shimmering-gold" onclick="awaitChangeCard()" id="changeClicks(1)"
+                            style="display: inline;">Kartentausch</button>
+                        <button class="hover-effect shimmering-gold " onclick="noChanges()" id="changeClicks(2)"
+                            style="display: inline;">Nothing
+                            to
+                            Change</button>
+                        <button class="hover-effect shimmering-gold" onclick="setCardCombi()" id="changeClicks(3)"
+                            style="display: none;">Komponiere einen
+                            Zauber</button>
+                        <button class="hover-effect shimmering-gold" onclick="useMellot()" id="changeClicks(4)"
+                            style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon"></button>
+                        <button class="hover-effect shimmering-gold" onclick="useGoblin()" id="changeClicks(5)"
+                            style="display: none;"><img src="assets/images/btn/gob-stand.png" alt="icon"></button>
+                        <button class="hover-effect shimmering-gold" onclick="useWizzard()" id="changeClicks(6)"
+                            style="display: none;"><img src="assets/images/btn/wiz-stand.png" alt="icon"></button>
+                        <button class="hover-effect shimmering-gold" onclick="stepBack()" id="changeClicks(8)"
+                            style="display: none;">Step
+                            Back</button>
+                        <!--actually nextPlayer() insted of changeCard()-->
+                        <button class="hover-effect shimmering-gold" onclick="handleFinishRoundClick()"
+                            id="changeClicks(7)" style="display: none;">Finish
+                            Round</button>
+                    </div>
+                </div>
+
+                <!------------------- PLAYER PART ------------------------>
+                <div class="table-bottom" id="currentPlayerPartID">
+                    <div class="accord-zone" id="">
+                        <div class="circle-img hover-effect" id="playerCircle1">
+                            <!-----------ACC CIRCLE---------------->
+                        </div>
+                        <div class="circle-img hover-effect" id="playerCircle2">
+                            <!-----------ACC CIRCLE---------------->
+                        </div>
+                        <div class="chain-helper-frame">
+                            <img class="info-chain" src="assets/images/icons/info-5-24.png" alt="Info">
+                            <img src="assets/images/acc-helper.jpg" class="chain-helper" alt="Chain Helper">
+                        </div>
+                    </div>
+                    <div class="bottom-zone" id="">
+                        <div class="name-frame brass-plate">
+                            <h5 class="zone-descr">Player-Card Zone</h5>
+                            <h2 class="name" id="playNameID">Beta</h2>
+                        </div>
+                        <div class="card-group" id="playerStackID">
+                            <!-- 5 Cards -->
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <!-------------BUTTON PART-------------------->
-            <div class="table-center" id="secondPartID">
-
-                <div class="info-frame brass-plate">
-                    <div class="info-text" id="infoTextID"></div>
-                </div>
-
-                <div class="btn-group">
-                    <button class="hover-effect shimmering-gold" onclick="awaitChangeCard()" id="changeClicks(1)"
-                        style="display: inline;">Kartentausch</button>
-                    <button class="hover-effect shimmering-gold " onclick="noChanges()" id="changeClicks(2)"
-                        style="display: inline;">Nothing
-                        to
-                        Change</button>
-                    <button class="hover-effect shimmering-gold" onclick="setCardCombi()" id="changeClicks(3)"
-                        style="display: none;">Komponiere einen
-                        Zauber</button>
-                    <button class="hover-effect shimmering-gold" onclick="useMellot()" id="changeClicks(4)"
-                        style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon"></button>
-                    <button class="hover-effect shimmering-gold" onclick="useGoblin()" id="changeClicks(5)"
-                        style="display: none;"><img src="assets/images/btn/gob-stand.png" alt="icon"></button>
-                    <button class="hover-effect shimmering-gold" onclick="useWizzard()" id="changeClicks(6)"
-                        style="display: none;"><img src="assets/images/btn/wiz-stand.png" alt="icon"></button>
-                    <button class="hover-effect shimmering-gold" onclick="stepBack()" id="changeClicks(8)"
-                        style="display: none;">Step
-                        Back</button>
-                    <!--actually nextPlayer() insted of changeCard()-->
-                    <button class="hover-effect shimmering-gold" onclick="handleFinishRoundClick()" id="changeClicks(7)"
-                        style="display: none;">Finish
-                        Round</button>
-                </div>
-            </div>
-
-            <!------------------- PLAYER PART ------------------------>
-            <div class="table-bottom" id="currentPlayerPartID">
-                <div class="accord-zone" id="">
-                    <div class="circle-img hover-effect" id="playerCircle1">
-                        <!-----------ACC CIRCLE---------------->
-                    </div>
-                    <div class="circle-img hover-effect" id="playerCircle2">
-                        <!-----------ACC CIRCLE---------------->
-                    </div>
-                </div>
-                <div class="bottom-zone" id="">
-                    <div class="name-frame brass-plate">
-                        <h5 class="zone-descr">Player-Card Zone</h5>
-                        <h2 class="name" id="playNameID">Beta</h2>
-                    </div>
-                    <div class="card-group" id="playerStackID">
-                        <!-- 5 Cards -->
-                    </div>
-                </div>
-            </div>
-        </div>
         </div>
     </main>
     </div>
