--- a/table.html
+++ b/table.html
@@ -2,7 +2,7 @@
 <html lang="de">
 
 <head>
-    <link rel="shortcut icon" href="./assets/images/logo-black.png">
+    <link rel="favicon" href="./assets/images/logo-black.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,101 +22,113 @@
 </head>
 
 <body class="table-body" onload="initialize();" id="body">
-    <!-------------------- MAIN STUFF -------------------->
 
     <main>
+        <div class="bgr-img"> </div>
         <div id="headInfoID">
             <header w3-include-html="./templates/header.html"></header>
         </div>
+        <div class="table-frame">
 
-        <div class="filter-bgr">
-
-            <div class="table-frame">
-                <div class="table-top" id="observerPartID">
-                    <!-------------OBSERVER PART-------------------->
-                    <div class="accord-zone" id="">
-                        <div class="circle-img hover-effect" id="obsCircle1">
-                            <!-------------ACC CIRCLE-------------------->
-                        </div>
-                        <div class="circle-img hover-effect" id="obsCircle2">
-                            <!-------------ACC CIRCLE-------------------->
-                        </div>
-                        <div class="chain-helper-frame">
-                            <img class="info-chain" src="assets/images/icons/info-5-24.png" alt="Info">
-                            <img src="assets/images/acc-helper.jpg" class="chain-helper" alt="Chain Helper">
-                        </div>
+            <div class="table-top" id="observerPartID">
+                <!-------------OBSERVER PART-------------------->
+                <div class="accord-zone" id="">
+                    <div class="circle-img hover-effect" id="obsCircle1">
+                        <!-------------ACC CIRCLE-------------------->
                     </div>
-
-                    <div class="top-zone" id="topZoneID">
-                        <!-- mit btn startRound wird eigentlich PL1 und Pl2 getauscht-->
-                        <div class="name-frame brass-plate">
-                            <h5 class="zone-descr">Observer-Card Zone</h5>
-                            <h2 class="name" id="obsNameID">Alfa</h2>
-                        </div>
-                        <div class="card-group" id="observerStackID">
-                            <!-- 5 Cards -->
-                        </div>
+                    <div class="circle-img hover-effect" id="obsCircle2">
+                        <!-------------ACC CIRCLE-------------------->
                     </div>
                 </div>
 
-                <!-------------BUTTON PART-------------------->
-                <div class="table-center" id="secondPartID">
-
-                    <div class="left-center-frame">
-                        <div class="info-frame brass-plate">
-                            <div class="info-text" id="infoTextID"></div>
-                        </div>
-
+                <div class="top-zone" id="topZoneID">
+                    <div class="brass-plate btn">
+                        <h5 class="zone-descr">Observer-Card Zone</h5>
+                        <h2 class="name" id="obsNameID">Alfa</h2>
                     </div>
+                    <div class="card-group" id="observerStackID">
+                        <!-- 5 Cards -->
+                    </div>
+                </div>
+            </div>
 
-                    <div class="btn-group">
-                        <button class="hover-effect shimmering-gold" onclick="awaitChangeCard()" id="changeClicks(1)"
-                            style="display: inline;">Kartentausch</button>
-                        <button class="hover-effect shimmering-gold " onclick="noChanges()" id="changeClicks(2)"
-                            style="display: inline;">Nothing
-                            to
-                            Change</button>
-                        <button class="hover-effect shimmering-gold" onclick="setCardCombi()" id="changeClicks(3)"
-                            style="display: none;">Komponiere einen
-                            Zauber</button>
-                        <button class="hover-effect shimmering-gold" onclick="useMellot()" id="changeClicks(4)"
-                            style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon"></button>
-                        <button class="hover-effect shimmering-gold" onclick="useGoblin()" id="changeClicks(5)"
-                            style="display: none;"><img src="assets/images/btn/gob-stand.png" alt="icon"></button>
-                        <button class="hover-effect shimmering-gold" onclick="useWizzard()" id="changeClicks(6)"
-                            style="display: none;"><img src="assets/images/btn/wiz-stand.png" alt="icon"></button>
-                        <button class="hover-effect shimmering-gold" onclick="stepBack()" id="changeClicks(8)"
-                            style="display: none;">Step
-                            Back</button>
-                        <!--actually nextPlayer() insted of changeCard()-->
-                        <button class="hover-effect shimmering-gold" onclick="handleFinishRoundClick()"
-                            id="changeClicks(7)" style="display: none;">Finish
-                            Round</button>
+            <!-------------BUTTON PART-------------------->
+            <div class="table-center" id="secondPartID">
+
+                <div class="left-center-frame">
+                    <div class="info-frame brass-long no-btn">
+                        <div class="helper-frame">
+                            <div class="brass-gear2 btn" alt="Info"></div>
+                            <img src="assets/images/specials/acc-helper.jpg" class="chain-helper" alt="Chain Helper">
+                        </div>
+                        <div class="info-text" id="infoTextID"></div>
                     </div>
                 </div>
 
-                <!------------------- PLAYER PART ------------------------>
-                <div class="table-bottom" id="currentPlayerPartID">
-                    <div class="accord-zone" id="">
-                        <div class="circle-img hover-effect" id="playerCircle1">
-                            <!-----------ACC CIRCLE---------------->
-                        </div>
-                        <div class="circle-img hover-effect" id="playerCircle2">
-                            <!-----------ACC CIRCLE---------------->
-                        </div>
-                        <div class="chain-helper-frame">
-                            <img class="info-chain" src="assets/images/icons/info-5-24.png" alt="Info">
-                            <img src="assets/images/acc-helper.jpg" class="chain-helper" alt="Chain Helper">
+                <div class="btn-group">
+                    <div class="iron-long-cross btn" onclick="awaitChangeCard()" id="changeClicks(1)"
+                        style="display: inline;">Kartentausch</div>
+                    <div class="iron-long-cross btn" onclick="noChanges()" id="changeClicks(2)"
+                        style="display: inline;">Nothing to Change</div>
+                    <div class="iron-long-cross btn" onclick="setCardCombi()" id="changeClicks(3)"
+                        style="display: none;">Komponiere einen Zauber</div>
+                    <div class="iron-circle btn special" onclick="useMellot()" id="changeClicks(4)"
+                        style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon">
+                        <div class="helper-frame">
+                            <div class="brass-gear1 btn" alt="Info"> </div>
+                            <div class="mellot-info iron-plate no-btn">
+                                Mit dem Mellot kannst du eine eigene Karte gegen einen 
+                                gegnerische Karte eintauschen.
+                            </div>
                         </div>
                     </div>
-                    <div class="bottom-zone" id="">
-                        <div class="name-frame brass-plate">
-                            <h5 class="zone-descr">Player-Card Zone</h5>
-                            <h2 class="name" id="playNameID">Beta</h2>
+                    <div class="iron-circle btn special" onclick="useGoblin()" id="changeClicks(5)"
+                        style="display: none;"><img src="assets/images/btn/gob-stand.png" alt="icon">
+                        <div class="helper-frame">
+                            <div class="brass-gear1 btn" alt="Info"></div>
+                            <div class="goblin-info iron-plate no-btn">
+                                Mit dem Kobold kannst du einen Zauber vom Gegner stehlen, wenn er
+                                an einen deiner Zauber passt.
+                            </div>
                         </div>
-                        <div class="card-group" id="playerStackID">
-                            <!-- 5 Cards -->
+                    </div>
+                    <div class="iron-circle btn special" onclick="useWizzard()" id="changeClicks(6)"
+                        style="display: none;"><img src="assets/images/btn/wiz-stand.png" alt="icon">
+                        <div class="helper-frame">
+                            <div class="brass-gear1 btn" alt="Info"> </div>
+                            <div class="wizzard-info iron-plate no-btn">
+                                Mit dem Magier kannst du einen Zauber oder eine Kette mit dem
+                                Gegner austauschen, solange du noch einen Zauber für die Verkettung hast.
+                            </div>
                         </div>
+                    </div>
+                    <div class="iron-long-cross btn" onclick="stepBack()" id="changeClicks(8)" style="display: none;">
+                        Step Back</div>
+                    <!--actually nextPlayer() insted of changeCard()-->
+                    <div class="iron-long-cross btn" onclick="handleFinishRoundClick()" id="changeClicks(7)"
+                        style="display: none;">Finish
+                        Round</div>
+                </div>
+            </div>
+
+            <!------------------- PLAYER PART ------------------------>
+            <div class="table-bottom" id="currentPlayerPartID">
+                <div class="accord-zone" id="">
+                    <div class="circle-img hover-effect" id="playerCircle1">
+                        <!-----------ACC CIRCLE---------------->
+                    </div>
+                    <div class="circle-img hover-effect" id="playerCircle2">
+                        <!-----------ACC CIRCLE---------------->
+                    </div>
+
+                </div>
+                <div class="bottom-zone" id="">
+                    <div class="name-frame brass-plate no-btn">
+                        <h5 class="zone-descr">Player-Card Zone</h5>
+                        <h2 class="name" id="playNameID">Beta</h2>
+                    </div>
+                    <div class="card-group" id="playerStackID">
+                        <!-- 5 Cards -->
                     </div>
                 </div>
             </div>
