--- a/table.html
+++ b/table.html
@@ -57,7 +57,7 @@
 
                 <div class="left-center-frame">
                     <div class="info-frame brass-long no-btn">
-                        <div class="helper-frame">
+                        <div class="chain-frame">
                             <div class="brass-gear2 btn" alt="Info"></div>
                             <img src="assets/images/specials/acc-helper.jpg" class="chain-helper" alt="Chain Helper">
                         </div>
@@ -69,36 +69,37 @@
                     <div class="iron-long-cross btn" onclick="awaitChangeCard()" id="changeClicks(1)"
                         style="display: inline;">Kartentausch</div>
                     <div class="iron-long-cross btn" onclick="noChanges()" id="changeClicks(2)"
-                        style="display: inline;">Nothing to Change</div>
+                        style="display: inline;">Zurück</div>
                     <div class="iron-long-cross btn" onclick="setCardCombi()" id="changeClicks(3)"
                         style="display: none;">Komponiere einen Zauber</div>
                     <div class="iron-circle btn special" onclick="useMellot()" id="changeClicks(4)"
                         style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon">
                         <div class="helper-frame">
-                            <div class="brass-gear1 btn" alt="Info"> </div>
+                            <div class="brass-gear1 no-btn" alt="Info"> </div>
                             <div class="mellot-info iron-plate no-btn">
                                 Mit dem Mellot kannst du eine eigene Karte gegen einen 
-                                gegnerische Karte eintauschen.
+                                gegnerische Karte eintauschen. Oder du drückst 'zurück'.
                             </div>
                         </div>
                     </div>
                     <div class="iron-circle btn special" onclick="useGoblin()" id="changeClicks(5)"
                         style="display: none;"><img src="assets/images/btn/gob-stand.png" alt="icon">
                         <div class="helper-frame">
-                            <div class="brass-gear1 btn" alt="Info"></div>
+                            <div class="brass-gear1 no-btn" alt="Info"></div>
                             <div class="goblin-info iron-plate no-btn">
                                 Mit dem Kobold kannst du einen Zauber vom Gegner stehlen, wenn er
-                                an einen deiner Zauber passt.
+                                an einen deiner Zauber passt. Oder du drückst 'zurück'.
                             </div>
                         </div>
                     </div>
                     <div class="iron-circle btn special" onclick="useWizzard()" id="changeClicks(6)"
                         style="display: none;"><img src="assets/images/btn/wiz-stand.png" alt="icon">
                         <div class="helper-frame">
-                            <div class="brass-gear1 btn" alt="Info"> </div>
+                            <div class="brass-gear1 no-btn" alt="Info"> </div>
                             <div class="wizzard-info iron-plate no-btn">
                                 Mit dem Magier kannst du einen Zauber oder eine Kette mit dem
                                 Gegner austauschen, solange du noch einen Zauber für die Verkettung hast.
+                                Oder du drückst 'zurück'.
                             </div>
                         </div>
                     </div>
