try some styles

--- a/table.html
+++ b/table.html
@@ -69,7 +69,7 @@
                     <div class="iron-long-cross btn" onclick="awaitChangeCard()" id="changeClicks(1)"
                         style="display: inline;">Kartentausch</div>
                     <div class="iron-long-cross btn" onclick="noChanges()" id="changeClicks(2)"
-                        style="display: inline;">Zurück</div>
+                        style="display: inline;">Weiter</div>
                     <div class="iron-long-cross btn" onclick="setCardCombi()" id="changeClicks(3)"
                         style="display: none;">Komponiere einen Zauber</div>
                     <div class="iron-circle btn special" onclick="useMellot()" id="changeClicks(4)"
@@ -104,11 +104,10 @@
                         </div>
                     </div>
                     <div class="iron-long-cross btn" onclick="stepBack()" id="changeClicks(8)" style="display: none;">
-                        Step Back</div>
+                        Zurück</div>
                     <!--actually nextPlayer() insted of changeCard()-->
                     <div class="iron-long-cross btn" onclick="handleFinishRoundClick()" id="changeClicks(7)"
-                        style="display: none;">Finish
-                        Round</div>
+                        style="display: none;">Runde beenden</div>
                 </div>
             </div>
 
