fixed problem with two mellots. change some styles

--- a/table.html
+++ b/table.html
@@ -71,7 +71,7 @@
                     <div class="iron-long-cross btn" onclick="noChanges()" id="changeClicks(2)"
                         style="display: inline;">Weiter</div>
                     <div class="iron-long-cross btn" onclick="setCardCombi()" id="changeClicks(3)"
-                        style="display: none;">Komponiere einen Zauber</div>
+                        style="display: none;">Zauber komponieren</div>
                     <div class="iron-circle btn special" onclick="useMellot()" id="changeClicks(4)"
                         style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon">
                         <div class="helper-frame">
