--- a/table.html
+++ b/table.html
@@ -42,8 +42,8 @@
                 </div>
 
                 <div class="top-zone" id="topZoneID">
-                    <div class="brass-plate btn">
-                        <h5 class="zone-descr">Observer-Card Zone</h5>
+                    <div class="brass-long btn name-frame">
+                        <h5 class="zone-descr">Beobachter</h5>
                         <h2 class="name" id="obsNameID">Alfa</h2>
                     </div>
                     <div class="card-group" id="observerStackID">
@@ -123,7 +123,7 @@
 
                 </div>
                 <div class="bottom-zone" id="">
-                    <div class="name-frame brass-plate no-btn">
+                    <div class="name-frame brass-long no-btn">
                         <h5 class="zone-descr">Player-Card Zone</h5>
                         <h2 class="name" id="playNameID">Beta</h2>
                     </div>
