--- a/table.html
+++ b/table.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="bottom-zone" id="">
                     <div class="name-frame brass-long no-btn">
-                        <h5 class="zone-descr">Player-Card Zone</h5>
+                        <h5 class="zone-descr">Spieler</h5>
                         <h2 class="name" id="playNameID">Beta</h2>
                     </div>
                     <div class="card-group" id="playerStackID">
