--- a/table.html
+++ b/table.html
@@ -72,19 +72,23 @@
                         style="display: inline;">Weiter</div>
                     <div class="iron-long-cross btn" onclick="setCardCombi()" id="changeClicks(3)"
                         style="display: none;">Zauber komponieren</div>
-                    <div class="iron-circle btn special" onclick="useMellot()" id="changeClicks(4)"
-                        style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon">
-                        <div class="helper-frame">
+                    <div class="special-frame">
+                        <div class="iron-circle btn special" onclick="useMellot()" id="changeClicks(4)"
+                            style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon">
+                        </div>
+                        <div class="helper-frame" id="mellot-info">
                             <div class="brass-gear1 no-btn" alt="Info"> </div>
                             <div class="mellot-info iron-plate no-btn">
-                                Mit dem Mellot kannst du eine eigene Karte gegen einen 
+                                Mit dem Mellot kannst du eine eigene Karte gegen einen
                                 gegnerische Karte eintauschen. Oder du drückst 'zurück'.
                             </div>
                         </div>
                     </div>
-                    <div class="iron-circle btn special" onclick="useGoblin()" id="changeClicks(5)"
-                        style="display: none;"><img src="assets/images/btn/gob-stand.png" alt="icon">
-                        <div class="helper-frame">
+                    <div class="special-frame">
+                        <div class="iron-circle btn special" onclick="useGoblin()" id="changeClicks(5)"
+                            style="display: none;"><img src="assets/images/btn/gob-stand.png" alt="icon">
+                        </div>
+                        <div class="helper-frame" id="goblin-info">
                             <div class="brass-gear1 no-btn" alt="Info"></div>
                             <div class="goblin-info iron-plate no-btn">
                                 Mit dem Kobold kannst du einen Zauber vom Gegner stehlen, wenn er
@@ -92,9 +96,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="iron-circle btn special" onclick="useWizzard()" id="changeClicks(6)"
-                        style="display: none;"><img src="assets/images/btn/wiz-stand.png" alt="icon">
-                        <div class="helper-frame">
+                    <div class="special-frame">
+                        <div class="iron-circle btn special" onclick="useWizzard()" id="changeClicks(6)"
+                            style="display: none;"><img src="assets/images/btn/wiz-stand.png" alt="icon">
+                        </div>
+                        <div class="helper-frame" id="wizzard-info">
                             <div class="brass-gear1 no-btn" alt="Info"> </div>
                             <div class="wizzard-info iron-plate no-btn">
                                 Mit dem Magier kannst du einen Zauber oder eine Kette mit dem
