--- a/table.html
+++ b/table.html
@@ -21,17 +21,15 @@
     <title>Zauberkette</title>
 </head>
 
-<body class="table-body" onload="initialize();" id="body">
+<body onload="initialize();" id="body">
 
     <main>
-        <div class="bgr-img"> </div>
         <div id="headInfoID">
             <header w3-include-html="./templates/header.html"></header>
         </div>
         <div class="table-frame">
-
-            <div class="table-top" id="observerPartID">
-                <!-------------OBSERVER PART-------------------->
+<!-------------OBSERVER PART-------------------->
+            <div class="table-top" id="observerPartID">                
                 <div class="accord-zone" id="">
                     <div class="circle-img hover-effect" id="obsCircle1">
                         <!-------------ACC CIRCLE-------------------->
