fixed issue with brass-circle-style

--- a/table.html
+++ b/table.html
@@ -75,7 +75,7 @@
                             style="display: none;"><img src="assets/images/btn/mel-stand.png" alt="icon">
                         </div>
                         <div class="helper-frame" id="mellot-info">
-                            <div class="brass-gear1 no-btn" alt="Info"> </div>
+                            <div class="brass-gear1 no-btn" id="mellotBrass" alt="Info"> </div>
                             <div class="mellot-info iron-plate no-btn">
                                 Mit dem Mellot kannst du eine eigene Karte gegen einen
                                 gegnerische Karte eintauschen. Oder du drückst 'zurück'.
@@ -87,7 +87,7 @@
                             style="display: none;"><img src="assets/images/btn/gob-stand.png" alt="icon">
                         </div>
                         <div class="helper-frame" id="goblin-info">
-                            <div class="brass-gear1 no-btn" alt="Info"></div>
+                            <div class="brass-gear1 no-btn" id="goblinBrass" alt="Info"></div>
                             <div class="goblin-info iron-plate no-btn">
                                 Mit dem Kobold kannst du einen Zauber vom Gegner stehlen, wenn er
                                 an einen deiner Zauber passt. Oder du drückst 'zurück'.
@@ -99,7 +99,7 @@
                             style="display: none;"><img src="assets/images/btn/wiz-stand.png" alt="icon">
                         </div>
                         <div class="helper-frame" id="wizzard-info">
-                            <div class="brass-gear1 no-btn" alt="Info"> </div>
+                            <div class="brass-gear1 no-btn" id="wizzardBrass" alt="Info"> </div>
                             <div class="wizzard-info iron-plate no-btn">
                                 Mit dem Magier kannst du einen Zauber oder eine Kette mit dem
                                 Gegner austauschen, solange du noch einen Zauber für die Verkettung hast.
