renew position in hover accCard

--- a/table.html
+++ b/table.html
@@ -16,6 +16,7 @@
     <script src="scripts/script.js"></script>
     <script src="scripts/play-cards.js"></script>
     <script src="scripts/play-accords.js"></script>
+    <script src="scripts/play-table.js"></script>
     <script src="scripts/sound-mixer.js"></script>
     <script src="scripts/start-end-round.js"></script>
     <title>Zauberkette</title>
