sort functions in new order

--- a/table.html
+++ b/table.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" href="style/table.css">
 
     <script src="scripts/arrays.js"></script>
+    <script src="scripts/header.js"></script>
     <script src="scripts/templates.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/play-buttons.js"></script>
     <script src="scripts/play-cards.js"></script>
     <script src="scripts/play-accords.js"></script>
     <script src="scripts/play-table.js"></script>
