add info-card-frame, change some styles

--- a/table.html
+++ b/table.html
@@ -31,14 +31,20 @@
             <header w3-include-html="./templates/header.html"></header>
         </div>
         <div class="table-frame">
-<!-------------OBSERVER PART-------------------->
-            <div class="table-top" id="observerPartID">                
-                <div class="accord-zone" id="">
-                    <div class="circle-img hover-effect" id="obsCircle1">
-                        <!-------------ACC CIRCLE-------------------->
+            <!-------------OBSERVER PART-------------------->
+            <div class="table-top" id="observerPartID">
+                <div class="accord-zone">
+                    <div class="circle-frame">
+                        <div class="bgr-circle-l"></div>
+                        <div class="circle-img hover-effect" id="obsCircle1">
+                            <!-------------ACC CIRCLE-------------------->
+                        </div>
                     </div>
-                    <div class="circle-img hover-effect" id="obsCircle2">
-                        <!-------------ACC CIRCLE-------------------->
+                    <div class="circle-frame">
+                        <div class="bgr-circle-r"></div>
+                        <div class="circle-img hover-effect" id="obsCircle2">
+                            <!-------------ACC CIRCLE-------------------->
+                        </div>
                     </div>
                 </div>
 
@@ -120,21 +126,25 @@
 
             <!------------------- PLAYER PART ------------------------>
             <div class="table-bottom" id="currentPlayerPartID">
-                <div class="accord-zone" id="">
+                <div class="accord-zone" id="">                    <div class="circle-frame">
+                    <div class="bgr-circle-l"></div>
                     <div class="circle-img hover-effect" id="playerCircle1">
-                        <!-----------ACC CIRCLE---------------->
+                        <!-------------ACC CIRCLE-------------------->
                     </div>
+                </div>
+                <div class="circle-frame">
+                    <div class="bgr-circle-r"></div>
                     <div class="circle-img hover-effect" id="playerCircle2">
-                        <!-----------ACC CIRCLE---------------->
+                        <!-------------ACC CIRCLE-------------------->
                     </div>
-
+                </div>
                 </div>
                 <div class="bottom-zone" id="">
                     <div class="name-frame brass-long no-btn">
                         <h5 class="zone-descr">Spieler</h5>
                         <h2 class="name" id="playNameID">Beta</h2>
                     </div>
-                    <div class="card-group" id="playerStackID">
+                    <div class="card-group" id="playerStackID">                        
                         <!-- 5 Cards -->
                     </div>
                 </div>
