--- a/table.html
+++ b/table.html
@@ -28,7 +28,7 @@
 <body onload="initialize();" id="body">
 
     <main>
-        <div ></div>
+        <div>
             <header id="headInfoID"></header>
         </div>
         <div class="table-frame">
