--- a/table.html
+++ b/table.html
@@ -28,21 +28,19 @@
 <body onload="initialize();" id="body">
 
     <main>
-        <div>
             <header id="headInfoID"></header>
-        </div>
         <div class="table-frame">
+            <div class="inner-table">
+
             <!-------------OBSERVER PART-------------------->
             <div class="table-top" id="observerPartID">
                 <div class="accord-zone">
                     <div class="circle-frame">
-                        <div class="bgr-circle-l"></div>
                         <div class="circle-img hover-effect" id="obsCircle1">
                             <!-------------ACC CIRCLE-------------------->
                         </div>
                     </div>
                     <div class="circle-frame">
-                        <div class="bgr-circle-r"></div>
                         <div class="circle-img hover-effect" id="obsCircle2">
                             <!-------------ACC CIRCLE-------------------->
                         </div>
@@ -117,14 +115,13 @@
 
             <!------------------- PLAYER PART ------------------------>
             <div class="table-bottom" id="currentPlayerPartID">
-                <div class="accord-zone" id="">                    <div class="circle-frame">
-                    <div class="bgr-circle-l"></div>
+                <div class="accord-zone" id="">                    
+                    <div class="circle-frame">                    
                     <div class="circle-img hover-effect" id="playerCircle1">
                         <!-------------ACC CIRCLE-------------------->
                     </div>
                 </div>
                 <div class="circle-frame">
-                    <div class="bgr-circle-r"></div>
                     <div class="circle-img hover-effect" id="playerCircle2">
                         <!-------------ACC CIRCLE-------------------->
                     </div>
@@ -139,6 +136,7 @@
                         <!-- 5 Cards -->
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </main>
