--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="scripts/arrays.js"></script>
     <script src="scripts/script.js"></script>
     <script src="scripts/play.js"></script>
+    <script src="scripts/sound-mixer.js"></script>
 
     <title>Zauberkette</title>
 </head>
