--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/table.css">
+    
+    <script src="scripts/arrays.js"></script>
     <script src="scripts/header.js"></script>
     <script src="scripts/variable-texts.js"></script>
     <script src="scripts/static-texts.js"></script>
-    <script src="scripts/arrays.js"></script>
     <script src="scripts/script.js"></script>
-    <script src="scripts/play.js"></script>
+    <script src="scripts/play-buttons.js"></script>
+    <script src="scripts/play-cards.js"></script>
+    <script src="scripts/play-accords.js"></script>
+    <script src="scripts/play-table.js"></script>
     <script src="scripts/sound-mixer.js"></script>
+    <script src="scripts/start-end-round.js"></script>
+    <script src="scripts/tableHTML.js"></script>
 
     <title>Zauberkette</title>
 </head>
